--- a/package.json
+++ b/package.json
@@ -3,17 +3,36 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulp.js",
+  "dependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "browserify": "^13.1.1",
+    "browserify-ngannotate": "^2.0.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-cachebust": "0.0.6",
+    "gulp-concat": "^2.6.0",
+    "gulp-print": "^2.0.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "gulp-webserver": "^0.9.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DevMountain/intro-gulp-sass-starter.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-cachebust": "^0.0.6",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.2.0"
-  }
+  "bugs": {
+    "url": "https://github.com/DevMountain/intro-gulp-sass-starter/issues"
+  },
+  "homepage": "https://github.com/DevMountain/intro-gulp-sass-starter#readme"
 }
