--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-cachebust": "^0.0.6",
+    "gulp-babel": "^6.1.2",
+    "gulp-cachebust": "0.0.6",
+    "gulp-concat": "^2.6.1",
+    "gulp-print": "^2.0.1",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.2.0"
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.1.0",
+    "sass": "^0.5.0"
   }
 }
